---
source: crates/sui-prover/tests/integration.rs
assertion_line: 260
expression: output
---
exiting with bytecode transformation errors
error: Invalid quantifier macro pattern: Invalid standalone usage of start function
   ┌─ tests/../../../packages/prover/sources/prover.move:78:1
   │
78 │ public native fun begin_exists_lambda<T>(): &T;
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
